=============
MAJOR RELEASE
=============
	+++++++++++++
	MINOR RELEASE
	+++++++++++++
		-------------
		MICRO RELEASE
		-------------

***********************************************************************
** Visit  https://github.com/wtrdrnkr/pyrecon  for additional detail **
***********************************************************************
		-------------
		Version 1.2.2
		-------------
		*Removed some extra verbose code
		
		-------------
		Version 1.2.1
		-------------
		*tools.excelTool will now name sheets based on the 5 first characters of the .ser file name (openpyxl module doesnt allow creation of pages with a name >~30 characters)
		
	+++++++++++++
	Version 1.2.0
	+++++++++++++
	*tools.classes.Series.getObjectLists()
		- removed $ cap from d## matching -> makes a sheet for d## even if it contains no protrusions
	*tools.classes.Series.getObjectHierarchy()
		- added output to show ignored objects
	*tools.excelTool.getDendriteDict()
		- implemented a filter to filter regex in self.filters
		- added regex to filter objects containing a space+word after the conventional name
			- (e.g. 'd17sp09 copy' and 'd19rh37 total' are filtered)
	*tools.excelTool.getProtrusionSpacing()
		- NEEDS A BETTER METHOD FOR IDENTIFYING PROTRUSION CHILDREN, soon
		- Removed tools.excelTool.excelWorkbook.getProtrusionSpacingCount(); redundant
	*LICENSE.txt
		- Added GNU General Public License
	*CHANGES.txt 
		- Indentation to reflect major/minor/micro hierarchy
		- Replaced * with +
	
		-------------
		Version 1.1.2
		-------------
		*Problem with excelTool(tools) where deleting the sheet names 'Sheet' caused an index error when saving; unfortunately, this seems to be a problem with the openpyxl library and thus I can not remove the empty 'Sheet' in the workbook
		*Updated how version changes are displayed in CHANGES.txt to reflect major/minor/micro (===,***,--- respectively)
		
		-------------
		Version 1.1.1
		-------------